Added function to add parents